--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 獲取完整歷史記錄，確保 git 資訊完整
+
+      - name: Diagnostic
+        run: |
+          ls -F
+          git status || echo "No git repo detected"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./  # 部署整個倉庫 root，包含引導 index.html 與 ardublockly 子資料夾
+          publish_dir: .  # 改為 . 試試
           publish_branch: gh-pages
           force_orphan: true
           # 排除不必要的檔案
-          exclude_assets: '.git*,build_installer*,Setup.exe'
+          exclude_assets: 'build_installer*,Setup.exe' # 移除 .git* 排除，交由 action 自行處理
